# elite_chronicles

./: .gitignore  CHANGELOG.md  README.md
.github/: copilot-instructions.md
backend/: .env.example  README.md  alembic.ini  requirements.txt  seed.py
desktop/: README.md  pyproject.toml
desktop/desktop_client/: __init__.py  adapters.py  audio_router.py  config.py  errors.py  floating_origin.py  main.py  models.py  network_client.py  runtime.py  scene_manager.py  session_store.py  ship_controller.py  smoke.py  system_renderer.py
desktop/desktop_client/ui/: __init__.py  panda3d_shell.py  retro_console.py
desktop/tests/: __init__.py  test_network_client.py  test_runtime.py  test_session_store.py  test_smoke.py  test_ui_retro_console.py
frontend/: README.md  package-lock.json  package.json  vitest.config.ts
prd/: audio-sfx-design.md  batch-01-core-systems-plan.md  batch-02-economy-logs-plan.md  batch-03-comms-admin-mvp-plan.md  batch-04-e2e-flight-trade-loop-plan.md  batch-05-flight-scene-traffic-visuals-plan.md  batch-06-system-celestials-scanner-plan.md  batch-07-docking-undocking-ship-station-visuals-plan.md  batch-08-collision-docking-safety-plan.md  batch-09-local-navigation-chart-plan.md  batch-10-in-system-travel-celestial-realism-plan.md  batch-11-galactic-chart-navigation-plan.md  batch-12-audio-event-key-table.md  batch-12-audio-sfx-coverage-settings-plan.md  batch-12.5-contract-test-matrix.md  batch-12.5-document-desktop-client.md  batch-13-collision-outcomes-damage-sfx-plan.md  batch-14-realtime-multiplayer-comms-plan.md  batch-template.md  prd.md  (+17 more)
(+134 files in other folders)
